# tREngineTests

./: .gitignore  .gitmodules  CMakeLists.txt  run.bat  run.sh
dependencies/: CMakeLists.txt
icon/: CMakeLists.txt  icon.rc
samples/: CMakeLists.txt  czlowiek.glb
samples/myglTF/: player.glb
samples/otherOBJ/korwin/: korwin.mtl
samples/otherOBJ/papa/: papa.mtl
samples/otherOBJ/pilsudzki/: pilsudzki.mtl
shaders/: CMakeLists.txt  comp.vert  gltfShader.frag  gltfShader.vert  rec.frag  rec.vert  screen.vert  shader.comp  shader.frag  shader.vert  synthwave.frag  text.frag  text2d.vert  texture.comp  texture.frag
source/: CMakeLists.txt  main.c  state.h
source/compText/: compTextEnum.h  loadResources.c  loadTest.c  test.c
source/compute/: compEnum.h  loadResources.c  loadTest.c  test.c
source/computeTexture/: compTextEnum.h  loadResources.c  loadTest.c  test.c
source/font/: fontEnum.h  loadResources.c  loadTest.c  test.c
source/gltf/: gltfEnum.h  loadResources.c  loadTest.c  test.c
source/mesh/: loadResources.c  loadTest.c  moveNext.c  test.c
source/multiObj/: loadResources.c  loadTest.c  multiObjEnum.h  test.c
source/rectangle/: loadResources.c  loadTest.c  rectangleEnum.h  test.c
source/screen/: loadResources.c  loadTest.c  screenEnum.h  test.c
source/state/: loadResources.c  loadTest.c  moveNext.c  state.h  test.c
source/twoAnimsGltf/: loadResources.c  loadTest.c  test.c  twoAnimsGltfEnum.h
